--- a/styles.css
+++ b/styles.css
@@ -11,9 +11,13 @@
     background-color: white;
     border-style: solid;
     border-width: 1px;
+    transition: 0.3s;
 
 }
 
-div.box:hover{
-    background-color: green;
-} 
+#buttons {
+    padding: 10px;
+    position: relative;
+    left: 30%;
+
+}
